k8s/overlays/stage/istio-virtualservice.yml
apiVersion: networking.istio.io/v1beta1
kind: VirtualService
metadata:
  name: dsp-stage-virtualservice
  namespace: default
spec:
  hosts:
  - stage.dsp.build.infra.gyber.org
  gateways:
  - dsp-stage-gateway
  http:
  - match:
    - uri:
        prefix: /
    route:
    - destination:
        host: dsp-stage-service
        port:
          number: 80
